# speechmarine

./: .gitignore  CMakeLists.txt  README.md  main.py  pyproject.toml  requirements.txt
pdm-custom-plugins/: pyproject.toml
speechmarine/lib/presets/: preset.py
speechmarine/lib/sound/: __init__.py  chain.py
speechmarine/lib/sound/effects/: __init__.py  bandpass.py  compressor.py  echo.py  effect.py  exciter.py  pitch.py  reverb.py  settings.py
speechmarine/lib/sound/utils/: utils.py
src/: _speechmarine.cpp
src/speechmarine/: __init__.py
src/speechmarine/lib/: __init__.py
src/speechmarine/lib/presets/: __init__.py
src/speechmarine/lib/sound/effects/: bandpass.py  compressor.py  echo.py  exciter.py  normalizer.py  pitch.py  reverb.py
src/speechmarine/lib/sound/utils/: utils.py
